# stock-analysis

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.smithery  README.md  mcp_server.py  pyproject.toml  run_agent.py  smithery.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: balance-sheet-analyst.md  cash-flow-analyst.md  income-statement-analyst.md  reddit-analyst.md  stocktwits-analyst.md
.claude/skills/: __init__.py  balance-sheet-analysis.md  cash-flow-analysis.md  fundamental-analysis.md  income-statement-analysis.md
.claude/skills/balance-sheet/: SKILL.md
.claude/skills/cash-flow/: SKILL.md
.claude/skills/company-overview/: SKILL.md
.claude/skills/fundamental-analysis/: SKILL.md
.claude/skills/income-statement/: SKILL.md
.claude/skills/reddit-sentiment/: SKILL.md
.claude/skills/sentiment-analysis/: SKILL.md
.claude/skills/stocktwits-sentiment/: SKILL.md
.github/workflows/: publish.yml
artifacts/edgar/: MSFT_edgar_balance_sheet.json  MSFT_edgar_cash_flow.json  MSFT_edgar_financial_ratios.json  MSFT_edgar_income_statement.json
clients/: __init__.py  api_client.py
common_utilities/: __init__.py  datetime_utils.py  text_utils.py
skills/: __init__.py  balance-sheet-analysis.md  company-overview.md  fundamental-analysis.md  income-statement-analysis.md  sentiment-analysis.md  stocktwits-sentiment.md
stock_analysis/: mcp_server.py  run_agent.py
stock_analysis_mcp/: __init__.py  server.py
tools/: __init__.py  server.py
tools/analysis/: __init__.py  financial_ratios.py
tools/edgar/: __init__.py  _serialize.py  balance_sheet.py  cash_flow.py  company_profile.py  edgar_tools.py  fetcher.py  income_statement.py  models.py  utils.py  xbrl.py
tools/formatters/: balance_sheet.py  cash_flow.py  income_statement.py  utils.py
tools/reddit/: __init__.py  client.py  fetcher.py  models.py  reddit_tools.py  tool.py  utils.py
tools/stocktwits/: __init__.py  client.py  fetcher.py  models.py  stocktwits_tools.py  tool.py  utils.py
