[project]
name = "stock-analysis-mcp"
version = "1.0.3"
description = "Financial analysis MCP server — SEC EDGAR fundamentals + Reddit/Stocktwits sentiment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "finance", "stock-analysis", "claude", "edgar", "sentiment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "claude-agent-sdk>=0.2.80",
    "anyio>=4.0",
    "edgar-sec>=0.5",
    "pandas>=2.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/SJDev2000/stock-analysis"
Repository = "https://github.com/SJDev2000/stock-analysis"
Issues = "https://github.com/SJDev2000/stock-analysis/issues"

[project.scripts]
stock-analysis-mcp = "stock_analysis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "stock_analysis_mcp",
    "tools",
    "skills",
    "clients",
    "common_utilities",
]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "skills"
